# store

./: .gitignore  .gitmodules  .travis.yml  ChangeLog.md  README.md  package.yaml  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-lts-3.13.yaml  stack.yaml  store.cabal  todo.md
bench/: Bench.hs
src/Data/: Store.hs
src/Data/Store/: Generics.hs  Impl.hs  Internal.hs  Streaming.hs  TH.hs  TypeHash.hs  Version.hs
src/Data/Store/Streaming/: Internal.hs
src/Data/Store/TH/: Internal.hs
src/Data/Store/TypeHash/: Internal.hs
src/System/IO/: ByteBuffer.hs
store/: ChangeLog.md  README.md  package.yaml  store.cabal
store-core/: ChangeLog.md  package.yaml  store-core.cabal
store-core/src/Data/Store/: Core.hs
store-core/src/Data/Store/Core/: Internal.hs
store-streaming/: ChangeLog.md  Changelog.mg  LICENSE  README.md  package.yaml  stack.yaml  store-streaming.cabal
store-streaming/src/Data/Store/: Streaming.hs
store-streaming/test/: LibSpec.hs
store-streaming/test/Data/Store/: StreamingSpec.hs
store/bench/: Bench.hs
store/src/Data/Store/: Internal.hs  TH.hs  TypeHash.hs  Version.hs
store/src/System/IO/: ByteBuffer.hs
store/test/: Allocations.hs
store/test/Data/: StoreSpec.hs
store/test/Data/Store/: StreamingSpec.hs
test/: Allocations.hs  Spec.hs
test/Data/: StoreSpec.hs
test/Data/Store/: StreamingSpec.hs  UntrustedSpec.hs
test/Spec/: TH.hs
test/System/IO/: ByteBufferSpec.hs
