name:                store
version:             0.1.0.0
synopsis:            Fast serialization
description:         Please see README.md
homepage:            http://github.com/fpco/store#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloa@fpcomplete.com
copyright:           2016 Michael Sloan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag verbose-test
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Data.Store
                     , Data.Store.Internal
                     , Data.Store.TH
  other-modules:       Data.Store.Impl
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , fail
                     , ghc-prim
                     , th-reify-many
                     , template-haskell
                     , text
                     , containers
                     , vector
                     , transformers
                     , bytestring
                     , array
                     , mono-traversable
                     , containers
                     , hspec
                     , hspec-smallcheck
                     , smallcheck
                     , syb
                     , safe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite store-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , store
                     , hspec
                     , smallcheck
                     , vector
                     , bytestring
                     , containers
                     , mono-traversable
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities -O2
  if flag(verbose-test)
      cpp-options:     -DVERBOSE_TEST
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/store
