name:                store
version:             0.1.0.0
synopsis:            Fast serialization
description:         Please see README.md
homepage:            http://github.com/fpco/store#readme
license:             MIT
license-file:        LICENSE
author:              FP Complete <dev@fpcomplete.com>
maintainer:          FP Complete <dev@fpcomplete.com>
copyright:           2016 FP Complete
category:            Serialization Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag verbose-test
    default: False
    manual: True

flag comparison-bench
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Data.Store
                     , Data.Store.Internal
                     , Data.Store.TH
                     , Data.Store.TypeHash
  other-modules:       Data.Store.Impl
                     , System.IO.ByteBuffer
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , containers
                     , cryptohash
                     , deepseq
                     , fail
                     , ghc-prim
                     , hashable
                     , hashable
                     , hspec
                     , hspec-smallcheck
                     , integer-gmp
                     , mono-traversable
                     , primitive
                     , safe
                     , smallcheck
                     , syb
                     , template-haskell
                     , text
                     , th-lift
                     , th-lift-instances
                     , th-reify-many
                     , time
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite store-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , store
                     , hspec
                     , smallcheck
                     , vector
                     , bytestring
                     , containers
                     , mono-traversable
                     , text
                     , template-haskell
                     , primitive
                     , unordered-containers
                     , hashable
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities -O2
  if flag(verbose-test)
      cpp-options:     -DVERBOSE_TEST
  default-language:    Haskell2010

benchmark store-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , criterion
                     , template-haskell
                     , store
                     , deepseq
                     , vector
                     , bytestring
  if flag(comparison-bench)
      build-depends:   cereal
                     , binary
                     , binary-serialise-cbor
      cpp-options:     -DCOMPARISON_BENCH
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/store
